Fix: Comprehensive SPA routing fixes for admin panel access

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,21 @@
   publish = "dist"
 
 [[redirects]]
+  from = "/only_admin"
+  to = "/only_admin/login"
+  status = 302
+
+[[redirects]]
+  from = "/only_admin/*"
+  to = "/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/admin/*"
+  to = "/index.html"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
