--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,20 @@ services:
     env: static
     buildCommand: npm install && npm run build
     staticPublishPath: ./dist
+    routes:
+      - type: redirect
+        source: /only_admin
+        destination: /only_admin/login
+        status: 302
+      - type: rewrite
+        source: /only_admin/*
+        destination: /index.html
+      - type: rewrite
+        source: /admin/*
+        destination: /index.html
+      - type: rewrite
+        source: /*
+        destination: /index.html
     envVars:
       - key: VITE_API_URL
         value: https://cyberpit-backend.onrender.com/api
