--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "npx vite",
-    "build": "npx vite build && npm run postbuild",
-    "postbuild": "copy public\\_redirects dist\\ && copy public\\404.html dist\\",
+    "build": "npx vite build",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "preview": "npx vite preview",
     "backend:install": "cd server && npm install",
